<resources>
    <string name="app_name">Taskmaster</string>
    <string name="myTasksTitle">My Tasks</string>
    <string name="allTasks">All Tasks</string>
    <string name="addTask">Add Task</string>
    <string name="taskTitle">Task Title</string>
    <string name="taskDescription">Task Description</string>
    <string name="addTaskTitle">Add a Task</string>
    <string name="userSettingsTitle">User Settings</string>
    <string name="usernameTitle">Username</string>
    <string name="save">Save</string>
    <string name="submitted">Settings Saved!</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="Task1">Task 1</string>
    <string name="task2">Task 2</string>
    <string name="task3">Task 3</string>
    <string name="UsernameTasks">%1$s\'s Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taskState">Status of Task</string>
    <string name="taskAdded">Task Added!</string>
    <string name="invalidStatus">Your status must be \"New\", \"In Progress\", \"Complete\", or \"Unknown\"</string>
    <string name="teamName">Team</string>
    <string name="signUp">Sign Up!</string>
    <string name="signUpTitle">Sign Up Here!</string>
    <string name="signIn">Sign In!</string>
    <string name="verifyAccount">Verify Account</string>
    <string name="loginTitle">Login</string>
    <string name="code">Verification Code</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="loginHere">Login Here!</string>
    <string name="addImage">Add Image to Task</string>
</resources>