...
        android:text="@string/teamName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSettingsUsernameTitleTextView" />

    <Button
        android:id="@+id/userSettingsSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSettingsTeamNameTitleTextView"
        app:layout_constraintVertical_bias="0.084" />

    <EditText
        android:id="@+id/userSettingsUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/userSettingsUsernameTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
...
